[FIX]Changed gap between Jobs portfolio to 1em

--- a/src/App.css
+++ b/src/App.css
@@ -380,6 +380,7 @@ header {
 .portfolio {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1em 1em;
   max-width:1280px;
   margin: 0 auto
 }
